fix: text overflow

--- a/src/assets/styles/tooltip.css
+++ b/src/assets/styles/tooltip.css
@@ -32,7 +32,7 @@
   opacity: 1 !important;
   border: 1px solid var(--color-border);
   color: var(--foreground);
-  white-space: nowrap;
+  white-space: normal;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -40,8 +40,8 @@
   pointer-events: none;
   box-shadow: var(--shadow-md);
   border-radius: var(--radius-md);
-  max-width: 10rem;
-  min-width: 8rem;
+  max-width: 15rem;
+  min-width: 12rem;
 }
 
 .leaflet-tooltip-custom__content {
